# quicksend

./: .gitignore  Makefile  README.md  docker-compose.local.yaml  pyproject.toml
app/: config.py  logger.py  main.py  send.py
app/auth/: jwt_auth.py
app/campaigns/config/: campaign_config.py
app/campaigns/enum/: campaign_status.py
app/campaigns/models/: attachment.py  campaign.py  recipient.py
app/campaigns/routes/: campaign_routes.py
app/campaigns/schemas/: create_message.py
app/campaigns/services/: attachment_service.py  campaign_service.py  recipient_service.py
app/campaigns/tasks/: send_emails_task.py
app/common/: config.py  database.py  logger.py  security.py
app/common/db/: database.py
app/db/: db_manager.py  models.py  session.py
app/dependencies/: get_current_user.py  get_db.py
app/enums/: campaing_status.py  cant_send_emails_reasons.py
app/exceptions/: jwt_token_creation_failed_exception.py  no_google_token_data_exception.py
app/models/: attachment.py  campaign.py  google_token.py  payment.py  recipient.py  subscription.py  user.py
app/repositories/: user.py
app/routers/: google_sheets_router.py
app/schemas/: campaign.py  google_sheets.py  token_schema.py  user_schema.py
app/services/: campaign_service.py  gmail_service.py  google_sheets_service.py  google_token_service.py  subscription_service.py  user_service.py
app/subpay/: subscriptions.py
app/utils/: google_sheets.py  send_emails_kafka.py
app/workers/: celery_app.py
consumer/: consumer.py
docker/app/: Dockerfile
docker/nginx/: nginx.conf
migrations/: env.py
(+64 files in other folders)
