[project]
name = "quicksend"
version = "0.1.0"
description = "Service for sending mass email via Gmail API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "authlib>=1.6.5",
    "black>=25.9.0",
    "celery>=5.5.3",
    "fastapi>=0.120.4",
    "flower>=2.0.1",
    "google-api-python-client>=2.186.0",
    "google-auth-oauthlib>=1.2.3",
    "kombu>=5.5.4",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg>=3.2.12",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.0",
    "uvicorn[standard]>=0.38.0",
    "fastapi-intelligent-cache>=0.1.4",
    "redis>=7.0.1",
    "httpx>=0.28.1",
    "yookassa>=3.9.0",
]
